# health-care-ops

./: app.py  databricks.yml  generate_data_notebook.py  generate_data_script.py  pyproject.toml  requirements.txt  seed_lakebase.sql
frontend/: index.html
server/: config.py  db.py
server/routes/: dashboard.py  financials.py  providers.py  quality.py
